--- a/force-app/main/default/classes/AccountService.cls
+++ b/force-app/main/default/classes/AccountService.cls
@@ -1,6 +1,6 @@
-public with sharing class AccountService {
-    @AuraEnabled
-    public static Account[] getAccounts() {
+global with sharing class AccountService {
+    @RemoteAction
+    global static Account[] getAccounts() {
         return [SELECT Id, Name FROM Account];
     }
 }
